--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'rsFont';
+    src: local('/Recursos/runescape_uf.ttf') format('truetype');
+}
 
 .background {
     background: url('Recursos/background.gif');
@@ -11,8 +15,12 @@
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 2fr 3fr 2fr;
     background-color: transparent;
+}
+
+.c-mar {
+    width: 50%;
 }
 
 .header-text {
@@ -24,13 +32,15 @@
     font-weight: 200;
 }
 
+
 .item {
     background-color: transparent;
-    /* border: 1px solid rgba(0,0,0,0.8);  --> esta linee ayuda a ver como esta organizada la pagina*/
+    /* --> esta linea ayuda a ver como esta organizada la pagina */
+    /* border: 1px solid rgba(0,0,0,0.8);   */
     text-align: center;
     height: auto;
 }
-
+ 
 .cabeza {  
     grid-template-columns: 1fr;
     background-color: black;
@@ -62,8 +72,24 @@
     height: 100px;    
 }
 
+.title-card {
+    transition:transform 0.25s ease;
+}
+
+.title-card:hover {
+    -webkit-transform:scale(1.2); 
+    transform:scale(1.2);
+}
+
 .stock-images {
     height: 100%;
+    transition:transform 0.25s ease;
+}
+
+.stock-images:hover {
+    -webkit-transform:scale(3); 
+    transform:scale(3);
+    border: 2px solid black;
 }
 
 .suelto {
@@ -80,15 +106,22 @@
 }
 
 .info-container {
+    border-radius: 7px;
     padding-top: 1%;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 5%;
+    margin-right: 5%;
     color: white;
     background-color: #28282B;
     border: 2px solid silver;
     display: grid;
-    column-count: 2;
-    justify-content: center;
+    color: white;
+    font-size: 25px;
+}
+
+.dif-cont {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    grid-template-columns: 1fr 5fr 1fr;
 }
 
 .background-contacto {
