--- a/style.css
+++ b/style.css
@@ -1,129 +1,1 @@
-* {
-    box-sizing: border-box;
-}
-
-@font-face {
-    font-family: 'rsFont';
-    src: local('/Recursos/runescape_uf.ttf') format('truetype');
-}
-
-.background {
-    background: url('Recursos/background.gif');
-    background-size: cover;
-    background-repeat: repeat-x;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 2fr 3fr 2fr;
-    background-color: transparent;
-}
-
-.c-mar {
-    width: 50%;
-}
-
-.header-text {
-    font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-style: italic;
-    padding: 0.5%;
-    font-size: 130%;
-    color: yellow;
-    font-weight: 200;
-}
-
-
-.item {
-    background-color: transparent;
-    /* --> esta linea ayuda a ver como esta organizada la pagina */
-    /* border: 1px solid rgba(0,0,0,0.8);   */
-    text-align: center;
-    height: auto;
-}
- 
-.cabeza {  
-    grid-template-columns: 1fr;
-    background-color: black;
-    border-radius: 7px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.bl-bg {
-    background-color: rgba(100, 100, 100, 0.8);
-}
-
-.wht-bg {
-    background-color: white;
-}
-
-.square {
-    padding: 3px;
-    border: 1px solid black;
-    height: 75px;
-    max-width: 45%;
-    border-radius: 7px;
-    margin-left: 27%;
-}
-.cuerpo {
-    border: 1px solid black;
-    border-radius: 7px;
-    grid-template-columns: repeat(4, 25%);
-}
-.images {
-    height: 100px;    
-}
-
-.title-card {
-    transition:transform 0.25s ease;
-}
-
-.title-card:hover {
-    -webkit-transform:scale(1.2); 
-    transform:scale(1.2);
-}
-
-.stock-images {
-    height: 100%;
-    transition:transform 0.25s ease;
-}
-
-.stock-images:hover {
-    -webkit-transform:scale(3); 
-    transform:scale(3);
-    border: 2px solid black;
-}
-
-.suelto {
-    border: none;
-}
-
-.descripcion {
-    background-color: lightgray;
-    padding: 1%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 200;
-    width: 64%;
-    margin-left: 20%;
-}
-
-.info-container {
-    border-radius: 7px;
-    padding-top: 1%;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: white;
-    background-color: #28282B;
-    border: 2px solid silver;
-    display: grid;
-    color: white;
-    font-size: 25px;
-}
-
-.dif-cont {
-    margin-top: 5px;
-    margin-bottom: 15px;
-    grid-template-columns: 1fr 5fr 1fr;
-}
-
-.background-contacto {
-    background-color: black;
-}
+**{box-sizing:border-box}@font-face{font-family:rsFont;src:local('/Recursos/runescape_uf.ttf') format('truetype')}.background{background:url(Recursos/background.gif);background-size:cover;background-repeat:repeat-x}.container{display:grid;grid-template-columns:2fr 3fr 2fr;background-color:transparent}.c-mar{width:50%}.header-text{font-family: 'Roboto', 'sans-serif';font-style:italic;padding:.5%;font-size:130%;color:#ff0;font-weight:200}.item{background-color:transparent;text-align:center;height:auto}.cabeza{grid-template-columns:1fr;background-color:#000;border-radius:7px;box-shadow:rgba(0,0,0,.35) 0 5px 15px}.bl-bg{background-color:rgba(100,100,100,.8)}.wht-bg{background-color:#fff}.square{padding:3px;border:1px solid #000;height:75px;max-width:45%;border-radius:7px;margin-left:27%}.cuerpo{border:1px solid #000;border-radius:7px;grid-template-columns:repeat(4,25%)}.images{height:100px}.title-card{transition:transform .25s ease}.title-card:hover{-webkit-transform:scale(1.2);transform:scale(1.2)}.stock-images{height:100%;transition:transform .25s ease}.stock-images:hover{-webkit-transform:scale(3);transform:scale(3);border:2px solid #000}.suelto{border:none}.descripcion{background-color:#d3d3d3;padding:1%;font-family:'Franklin Gothic Medium','Arial Narrow',Arial,sans-serif;font-weight:200;width:64%;margin-left:20%}.info-container{border-radius:7px;padding-top:1%;margin-left:5%;margin-right:5%;color:#fff;background-color:#28282b;border:2px solid silver;display:grid;color:#fff;font-size:25px}.dif-cont{margin-top:5px;margin-bottom:15px;grid-template-columns:1fr 5fr 1fr}.background-contacto{background-color:#000}
